fix bottom margin giving main body a scrollbar

--- a/frontend/src/components/App/app.scss
+++ b/frontend/src/components/App/app.scss
@@ -3,7 +3,7 @@
 body {
 	background-color: $base3;
 	color: $base00;
-	margin: 2em;
+	margin: 2em 2em 0 2em;
 }
 
 button {
